--- a/StudentsRegistration/Base.lproj/Main.storyboard
+++ b/StudentsRegistration/Base.lproj/Main.storyboard
@@ -60,64 +60,41 @@
         <!--Delete-->
         <scene sceneID="d3J-Wu-Bgi">
             <objects>
-                <viewController id="yG2-te-mCU" sceneMemberID="viewController">
+                <viewController id="yG2-te-mCU" customClass="DeleteViewController" customModule="StudentsRegistration" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="sC8-tO-RBQ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User Id" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1OA-Qx-mNb">
-                                <rect key="frame" x="20" y="261" width="224" height="25.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="70000" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="8s0-ah-ydz">
-                                <rect key="frame" x="20" y="299" width="374" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Sl-uX-0sW">
-                                <rect key="frame" x="150" y="388" width="114" height="68"/>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="29"/>
-                                <state key="normal" title="Delete">
-                                    <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Delete" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ymx-TM-X7G">
-                                <rect key="frame" x="118" y="74" width="179" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="3su-GH-y3C"/>
-                                    <constraint firstAttribute="width" constant="179" id="oCk-zd-XAI"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eUc-YL-aoA">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="DELETE" id="5UN-3R-xho"/>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bYH-CV-Pep">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="8Hp-Pm-mPj">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8Hp-Pm-mPj" id="dh3-bL-dQf">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="0.75406885150000003" green="0.75408679249999999" blue="0.75407713649999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="3Sl-uX-0sW" firstAttribute="top" secondItem="8s0-ah-ydz" secondAttribute="bottom" constant="59" id="8hx-QX-BSo"/>
-                            <constraint firstItem="ddu-wb-v6t" firstAttribute="trailing" secondItem="1OA-Qx-mNb" secondAttribute="trailing" constant="170" id="A8Y-Mn-86Z"/>
-                            <constraint firstItem="ddu-wb-v6t" firstAttribute="trailing" secondItem="3Sl-uX-0sW" secondAttribute="trailing" constant="150" id="Gig-yt-coa"/>
-                            <constraint firstItem="ddu-wb-v6t" firstAttribute="trailing" secondItem="ymx-TM-X7G" secondAttribute="trailing" constant="117" id="JyN-Oa-K8n"/>
-                            <constraint firstItem="ddu-wb-v6t" firstAttribute="trailing" secondItem="8s0-ah-ydz" secondAttribute="trailing" constant="20" id="Mxh-2x-bun"/>
-                            <constraint firstItem="1OA-Qx-mNb" firstAttribute="top" secondItem="ymx-TM-X7G" secondAttribute="bottom" constant="157" id="Npl-Q7-4Ij"/>
-                            <constraint firstItem="ymx-TM-X7G" firstAttribute="top" secondItem="ddu-wb-v6t" secondAttribute="top" constant="30" id="SyR-Tb-83z"/>
-                            <constraint firstItem="3Sl-uX-0sW" firstAttribute="leading" secondItem="ddu-wb-v6t" secondAttribute="leading" constant="150" id="THa-ha-yiS"/>
-                            <constraint firstItem="ddu-wb-v6t" firstAttribute="trailing" secondItem="ymx-TM-X7G" secondAttribute="trailing" constant="117" id="UHv-Jw-Gne"/>
-                            <constraint firstItem="ddu-wb-v6t" firstAttribute="bottom" secondItem="3Sl-uX-0sW" secondAttribute="bottom" constant="357" id="YoK-qC-ag0"/>
-                            <constraint firstItem="8s0-ah-ydz" firstAttribute="top" secondItem="1OA-Qx-mNb" secondAttribute="bottom" constant="8" id="aYG-NQ-4us"/>
-                            <constraint firstItem="ymx-TM-X7G" firstAttribute="leading" secondItem="ddu-wb-v6t" secondAttribute="leading" constant="118" id="gqk-lQ-hCN"/>
-                            <constraint firstItem="8s0-ah-ydz" firstAttribute="leading" secondItem="ddu-wb-v6t" secondAttribute="leading" constant="20" id="j8t-Cb-bLw"/>
-                            <constraint firstItem="ymx-TM-X7G" firstAttribute="leading" secondItem="ddu-wb-v6t" secondAttribute="leading" constant="118" id="nTS-Xj-Mo3"/>
-                            <constraint firstItem="ymx-TM-X7G" firstAttribute="top" secondItem="ddu-wb-v6t" secondAttribute="top" constant="30" id="oq8-5T-BSq"/>
-                            <constraint firstItem="1OA-Qx-mNb" firstAttribute="leading" secondItem="ddu-wb-v6t" secondAttribute="leading" constant="20" id="y3N-cf-Sx8"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="ddu-wb-v6t"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Delete" image="cancel" selectedImage="cancel" id="YdM-2N-8KV"/>
+                    <connections>
+                        <outlet property="studentTableView" destination="bYH-CV-Pep" id="L8T-l4-szs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3OC-ef-loI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
